--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -78,7 +78,7 @@ footer a:hover {
     color: black;
 }
 footer p {
-    text-size: 1.2em;
+    font-size: 1.2em;
 }
 footer p a:hover {
     text-decoration: underline;
