--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Permanent+Marker&display=swap');
+
 /* width and alignment, colors, links */
 content {
     max-width: 300px;
@@ -7,6 +9,7 @@ nav a {
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 h1,h4 {
     text-align: center;
@@ -26,12 +29,19 @@ main section {
 }
 .icon {
     width: 80px;
+    padding-top: 15px;
 }
 #hero-image {
     width:100%
 }
 body {
     background-color: lightblue;
+    font-family: 'Lora', Arial, Helvetica;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {margin: 0;
 }
 header {
     background-color: #666a86
@@ -44,6 +54,10 @@ nav a:hover {
     background-color: lightblue;
     color: blue;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: white;
@@ -54,18 +68,28 @@ nav a:hover {
 }
 .msg {
     background-color: lightblue;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer {
-    background-color: #666a86
+    background-color: #666a86;
+    padding: 25px 50px;
 }
 .home-title {
     color: black;
+    font-family: 'Permanent Marker', 'Trebuchet MS', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 .msg h2 {
     color: black;
+    font-family: 'Permanent Marker', 'Trebuchet MS', sans-serif;
+    font-size: 1.5em;
 }
 .msg p  {
     color: black;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 footer h3 {
     color: black;
@@ -82,4 +106,17 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
+}
+#logo_link {
+    padding-top: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px;
+    border: 10px solid black;
+}
+main section img {
+    box-sizing: border-box;
 }
