--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -22,6 +22,8 @@ main section {
 }
 #background {
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .logo {
     width: 80px;
@@ -31,8 +33,28 @@ main section {
     padding-top: 15px;
 }
 #hero-image {
-    width:100%
+    width: 100%;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+    justify-self: center;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4{
+    color: white;
+}
+
 body {
     background-color: lightblue;
     font-family: 'Lora', Arial, Helvetica;
@@ -43,7 +65,13 @@ body {
 h2 {margin: 0;
 }
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #666a86
+}
+nav { display: flex;
+    justify-content: space-around;
+
 }
 nav a:hover {
     background-color: white;
@@ -69,13 +97,20 @@ nav a:hover {
     background-color: lightblue;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
 footer {
     background-color: #666a86;
     padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .home-title {
-    color: black;
+    color: white;
     font-family: 'Permanent Marker', 'Trebuchet MS', sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -108,6 +143,8 @@ footer p a:hover {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 footer .social img {
     padding-top: 15px;
@@ -119,3 +156,76 @@ footer .social img {
 main section img {
     box-sizing: border-box;
 }
+.card-img, .mountains {
+    width: 100%
+}
+.rapids-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px black;
+}
+.card-img{
+    border: 10px solid black;
+    transition: scale(1.1);
+    box-shadow: 5px 5px 10px black;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
