--- a/portfolio/styles/site-plan.css
+++ b/portfolio/styles/site-plan.css
@@ -35,6 +35,7 @@ body {
   padding: 4em;
   font-size: 18px;
   text-align: center;
+  color: black;
 }
 img {
   display: block;
@@ -103,11 +104,11 @@ nav {
   background-color: var(--nav-background-color);
   line-height: 3em;
   text-align: center;
-  font-size: 1.2em;
+  font-size: 1.6em;
 }
 nav  {
   list-style-type: none;
-  display: flex;
+  display: center;
 
 }
 nav a {
@@ -122,7 +123,7 @@ nav a:link, nav a:visited {
 }
 nav a:hover {
   color: var(--nav-hover-link-color);
-  background-color: var(--nav-hover-background-color);
+  background-color: #6d6875;
 }
 
 .sitemap {
