--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Permanent+Marker&display=swap');
 /* width and alignment, colors, links */
-content {
-    max-width: 300px;
+#content {
+    max-width: 1600px;
     margin: 0 auto;
 }
 nav a {
     text-align: center;
-    color: black;
+    color: white;
     text-decoration: none;
     padding: 35px;
 }
@@ -32,7 +32,7 @@ main section {
     width: 80px;
     padding-top: 15px;
 }
-#hero-image {
+#hero-img {
     width: 100%;
 }
 #hero {
@@ -41,10 +41,9 @@ main section {
     margin-top: -100px;
 }
 #hero-box{
-    grid-column: 1/4;
+    grid-column: 1/6;
     grid-row: 1/3;
     z-index: -1;
-    justify-self: center;
 }
 #hero-msg{
     grid-column: 2/3;
@@ -64,6 +63,11 @@ body {
 }
 h2 {margin: 0;
 }
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10,1fr)
+}
+
 header {
     display: grid;
     grid-template-columns: 150px auto;
@@ -149,9 +153,8 @@ footer p a:hover {
 footer .social img {
     padding-top: 15px;
 }
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px;
-    border: 10px solid black;
+.rivers-card, .camping-card, .rapids-card { 
+    margin: 100px, 0;
 }
 main section img {
     box-sizing: border-box;
@@ -159,7 +162,7 @@ main section img {
 .card-img, .mountains {
     width: 100%
 }
-.rapids-card{
+.rivers-card{
     grid-column: 2/4;
     grid-row: 2/3;
 }
