--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -14,6 +14,7 @@ h1,h4 {
     text-align: center;
     color: black;
 }
+
 .button-box {
     text-align: center;
 }
@@ -32,15 +33,15 @@ main section {
     width: 80px;
     padding-top: 15px;
 }
-#hero-img {
+#hero-img, #rafting-img {
     width: 100%;
 }
-#hero {
+#hero, #hero-two {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
-#hero-box{
+#hero-box, #hero-box-two{
     grid-column: 1/6;
     grid-row: 1/3;
     z-index: -1;
@@ -53,7 +54,20 @@ main section {
 #hero-msg h4{
     color: white;
 }
-
+#hero-two-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-two-msg h4{
+    color: white
+}
+.subpage-title{
+    color: white;
+    font-family: 'Permanent Marker', 'Trebuchet MS', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
 body {
     background-color: lightblue;
     font-family: 'Lora', Arial, Helvetica;
@@ -61,11 +75,29 @@ body {
     margin: 0;
     padding: 0;
 }
-h2 {margin: 0;
+h2 {margin: 15px;
 }
 .home-grid{
     display: grid;
     grid-template-columns: repeat(10,1fr)
+}
+#paragraph-grid{
+    height: 250px;
+    grid-column: 1/11;
+    grid-row: 3/9;
+}
+#description{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.paragraph{
+    background-color: lightblue;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 2/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
 
 header {
@@ -119,6 +151,17 @@ footer {
     font-size: 2em;
     margin-top: 10px;
 }
+.paragraph h2 {
+    color: black;
+    font-family: 'Permanent Marker', 'Trebuchet MS', sans-serif;
+    font-size: 2em;
+
+}
+.paragraph p  {
+    color: black;
+    font-size: 1.05em;
+    padding-bottom: 5px;
+}
 .msg h2 {
     color: black;
     font-family: 'Permanent Marker', 'Trebuchet MS', sans-serif;
@@ -171,6 +214,21 @@ main section img {
     grid-row: 2/3;
 }
 .rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.fullday-card {
+    margin-top: 30px;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.halfday-card {
+    margin-top: 30px;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.threeday-card {
+    margin-top: 30px;
     grid-column: 8/10;
     grid-row: 2/3;
 }
