--- a/portfolio/styles/styles.css
+++ b/portfolio/styles/styles.css
@@ -27,21 +27,19 @@ Fonts are separated by a | */
 #content {
     max-width: 1600px;
     margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
+
 body {
-    max-width: 1600px;
     margin: 0 auto;
     padding: 4em;
     font-size: 18px;
     text-align: center;
     color: black;
-    
-
 }
 .home-grid{
-    display: grid;
-    grid-template-columns: 1200px 400px;
-    grid-template-rows: 1fr 1fr 1fr;
 }
 header {
     display: grid;
@@ -63,8 +61,9 @@ h2 {
     text-align: center;
 }
 .logo{
-    max-width: 400px;
-    margin-top: 150px;
+    grid-column: ;
+    grid-row:
+   
 }
 #logo_link {
     padding-top: 5px;
@@ -73,34 +72,11 @@ h2 {
     margin-left: 150px;
 }
 
-#home-image{
-    grid-column: 1/2;
-    grid-row: 1/3;
-   
-}
-#home-img{
-    max-width: 100%;
-}
+
 #paragraph{
-    grid-column: 2/3;
+    grid-column: 4/4;
     grid-row: 1/3;
-}
-#welcome{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    position: absolute;
-    text-align: center;
-    top: 800px;
-    left: 640px;
-    
-}
-.welcome-msg{
-    font-family: "Montserrat";
-    font-size: 30px;
-}
-.welcome-msg-text{
-    font-family: 'Amiri';
-    font-size: 50px;
+    color: black;
 }
 .social{
     display: grid;
