--- a/portfolio/styles/styles.css
+++ b/portfolio/styles/styles.css
@@ -27,19 +27,25 @@ Fonts are separated by a | */
 #content {
     max-width: 1600px;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    
 }
-
+header{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
 body {
     margin: 0 auto;
     padding: 4em;
     font-size: 18px;
     text-align: center;
     color: black;
+   
 }
+
 .home-grid{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 header {
     display: grid;
@@ -61,9 +67,11 @@ h2 {
     text-align: center;
 }
 .logo{
-    grid-column: ;
-    grid-row:
-   
+    grid-column:1/1 ;
+    grid-row:1/1  ;
+    max-width: 400px;
+    margin-left: -100px;
+    margin-top: -100px
 }
 #logo_link {
     padding-top: 5px;
@@ -73,15 +81,11 @@ h2 {
 }
 
 
-#paragraph{
-    grid-column: 4/4;
-    grid-row: 1/3;
-    color: black;
-}
+
 .social{
     display: grid;
-    grid-row: 1/3;
-    grid-column: 3/3;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
     
 }
 
@@ -95,6 +99,7 @@ nav {
 nav  {
     list-style-type: none;
     display: center;
+    grid-column: 1/2;
 
 }
 nav a {
